[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "environments"
version = "0.1.0"
description = "Environments for Reinforcement Learning"
authors = [
    {name = "Quentin Gallouédec", email = "quentin.gallouedec@huggingface.co"},
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "gradio"
]

[project.urls]
Homepage = "https://github.com/huggingface/environments"
Repository = "https://github.com/huggingface/environments"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
